--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" href="header.css">
+  <link rel="stylesheet" href="main.css">
     <style>
-      
      .buttons
      {
         margin: 3em;
@@ -82,7 +81,7 @@
      
     </style>
     <body>
-        <header class="header" style="
+        <header style="
         background-color:#efeef1; ">
             <p class="left_header_adopt"> &nbsp &nbsp &nbsp Adopt</p>
            <button class="btn heart">
