signup and login frontend

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <link rel="stylesheet" href="main.css">
     <style>
+      
      .buttons
      {
         margin: 3em;
@@ -81,8 +82,7 @@
      
     </style>
     <body>
-        <header style="
-        background-color:#efeef1; ">
+        <header class="header" style="background-color:#efeef1; ">
             <p class="left_header_adopt"> &nbsp &nbsp &nbsp Adopt</p>
            <button class="btn heart">
                 <a href="favourites.php"><img src="heart.png"></a>
