--- a/sign-up-login-form/src/index.html
+++ b/sign-up-login-form/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header style="background-color:#efeef1; ">
-		<p class="left_header_adopt"> &nbsp &nbsp &nbsp Adopt</p>
+		<p class="left_header_adopt"> <img src="logoo.png" width="130" height="100"></p>
 	   <button class="btn heart">
 			<a href="favourites.php"><img src="heart.png"></a>
 	   </button> 
