--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<div id="colophon" class="site-footer" style="position: relative; top: 520px;">
+<div id="colophon" class="site-footer">
   <div class="social-wrapper">
     <ul>
       <li>
